Created landing and about-us page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Lapis Robotics</title>
+    <title>Lapis Robotic</title>
+    <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   </head>
   <body>
-    <h1>Hello, Worldssss!</h1>
+    <div id="landing" class="section">
+      <div class="tit-text">
+        <h1>Lapis</h1>
+        <h1>Robotics</h1>
+      </div>
+
+      <div class="image-book">
+        <img class="place-img" src="">
+        <img class="place-img" src="">
+        <img class="place-img" src="">
+      </div>
+
+      <img class="down-icon" src="graphics/down-chevron.png" onclick="scroll100()">
+    </div>
+
+    <div id="about-us" class="section">
+      <div class="about-text">
+        <h1>Who are we?</h1>
+        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque, arcu non egestas efficitur, est dui interdum lacus, in consectetur enim mauris non nibh. Praesent semper finibus odio non tincidunt. Etiam vitae rhoncus erat, nec malesuada urna. Maecenas imperdiet sagittis faucibus. Nullam porta laoreet iaculis. Phasellus molestie sem nec blandit ultrices. Sed et tincidunt justo. Fusce posuere, mi nec aliquet bibendum, mauris lectus tincidunt elit, vitae porta tellus ligula viverra ligula.</h2>
+      </div>
+
+      <div class="about-photos">
+        <img class="place-img" src="">
+        <img class="place-img" src="">
+        <img class="place-img" src="">
+      </div>
+    </div>
+  
+    <script type="module" src="dist/main.js"></script>
   </body>
 </html>
-
-<script>
-  console.log("Hello, World!");
-</script>
